[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Background/backextin.png" type="Texture" id=1]
[ext_resource path="res://Assets/Main Characters/Player/Hit (32x32).png" type="Texture" id=2]
[ext_resource path="res://Assets/Main Characters/Player/Idle (32x32).png" type="Texture" id=3]
[ext_resource path="res://Assets/Main Characters/Player/Wall Jump (32x32).png" type="Texture" id=4]
[ext_resource path="res://Assets/Main Characters/Player/Run (32x32).png" type="Texture" id=5]
[ext_resource path="res://Scripts/tela_inicial.gd" type="Script" id=6]
[ext_resource path="res://Assets/Menu/Buttons/Close.png" type="Texture" id=7]
[ext_resource path="res://Assets/music/music_game.mp3" type="AudioStream" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("player/texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player/texture:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "hit"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player/texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player/texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player/texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player/texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=4]
resource_name = "jump"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/texture:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player/texture:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player/texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "run"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("player/texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player/texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("player/texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[node name="tela_inicial" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 136.25, 92.125 )
scale = Vector2( 0.337083, 0.337083 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 240.0
margin_top = 163.0
margin_right = 315.0
margin_bottom = 183.0
rect_pivot_offset = Vector2( -472, -157 )
text = "COMEÇAR"

[node name="player" type="KinematicBody2D" parent="."]

[node name="texture" type="Sprite" parent="player"]
position = Vector2( -536, -65 )
scale = Vector2( 2.44922, 2.44922 )
texture = ExtResource( 4 )
offset = Vector2( 236, 87 )
hframes = 5

[node name="anim" type="AnimationPlayer" parent="player"]
root_node = NodePath("../..")
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/hit = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/jump = SubResource( 4 )
anims/run = SubResource( 5 )

[node name="instrucao" type="Button" parent="."]
margin_left = 152.0
margin_top = 163.0
margin_right = 232.0
margin_bottom = 183.0
text = "Instruções"

[node name="Control" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Control"]
modulate = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
margin_left = -16.0
margin_top = 25.0
margin_right = 343.0
margin_bottom = 141.0
text = "O \"Sobreviva\" é um jogo de
plataforma onde o jogador
terá que coletar mantimentos
e ir até o abrigo.

As teclas do jogo são: ASDW ou as 
setinhas do teclado"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 22, 19 )
scale = Vector2( 2.03333, 1.75 )
texture = ExtResource( 7 )

[node name="sair_intrucao" type="Button" parent="Control"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 8.0
margin_top = 9.0
margin_right = 38.0
margin_bottom = 29.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="sobreviva" type="Control" parent="."]
margin_left = 115.0
margin_top = 39.0
margin_right = 155.0
margin_bottom = 79.0

[node name="Sobreviva" type="Label" parent="sobreviva"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 74.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SOBREVIVA"
uppercase = true

[node name="Sobreviva2" type="Label" parent="sobreviva"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 74.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SOBREVIVA"
uppercase = true

[node name="Sobreviva3" type="Label" parent="sobreviva"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 74.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SOBREVIVA"
uppercase = true

[node name="Sobreviva4" type="Label" parent="sobreviva"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 74.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "SOBREVIVA"
uppercase = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="instrucao" to="." method="_on_instrucao_pressed"]
[connection signal="pressed" from="Control/sair_intrucao" to="." method="_on_sair_intrucao_pressed"]
